<resources>
    <string name="app_name">Central Bank</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="se_connecter_string">SE CONNECTER</string>
    <string name="creer_un_compte_string">CREER UN COMPTE</string>
    <string name="sos_string">SOS</string>
    <string name="agences_string">AGENCES</string>
    <string name="se_souvenir_de_moi_string">Se souvenir de moi</string>
    <string name="mot_de_passe_oubli____string"><u>Mot de passe oublié?</u></string>

    <string name="compte_cheque_string">COMPTE CHEQUE</string>
    <string name="rib_string">008002022</string>
    <string name="numero_de_compte">Numéro de compte</string>
    <string name="password">Password</string>
    <string name="______string">*,**</string>
    <string name="mes_derni_res__transactions_string">Mes dernires  transactions</string>
    <string name="_17_avril_string">17 Avril</string>
    <string name="_2023_string">2023</string>
    <string name="type_de_la_transactions_string">Type de la transactions</string>
    <string name="sold_mad_string">+ 10000 MAD</string>
    <string name="title_activity_page_card">page_card</string>
    <string name="MesParametres_string">MES PARAMÈTRES</string>
    <string name="Mon_empreinte_string">Mon empreinte digitale</string>
    <string name="emp_digitale_string">Empreinte digitale</string>
    <string name="emp_texte_string">Associez votre empreinte à votre compte</string>
    <string name="password_string">Changer mon mot de passe</string>
    <string name="notif_string">Paramétrage des notifications</string>
    <string name="gestion_des_notif_string">GESTION DES NOTIFICATIONS</string>
    <string name="perso__lesnotif_string">Personnaliser les notifications pour chaque type d\'opération</string>
    <string name="gestion_mon_emp">GESTION DE L\'EMPREINTE</string>
    <string name="enregistrer_string">Enregistrer les modifictions</string>
    <string name="emp_alert_string">Voulez-vous associer votre empreinte à votre compte ?</string>
    <string name="pwd_title_settings">CHANGEMENT DU MOT DE PASSE</string>
    <string name="mon_ancien_pwd_string">Mon ancien mot de passe</string>
    <string name="mon_nv_pwd_string">Mon nouveau mot de passe</string>
    <string name="confirmer_pwd_string">Confirmer mon nouveau mot de passe</string>
    <string name="mesure_securite_string">Mesure de sécurité</string>
    <string name="les_mesure_string">Le mot de passe doit se composer d\'au moins 6 chiffres.\nVotre compte sera temporairement bloqué au bout de 3 tentatives erronées.\nVotre nouveau mot de passe ne doit pas être similaire à vos mots de passes utilisés.</string>
    <string name="account_number_string">Account Number</string>
    <string name="deconnecter_alert_string">Vous êtes sur le point de vous déconnecter</string>
    <string name="mon_rib_string">MON RIB</string>
    <string name="compte_cheque_partic_string">COMPTE CHEQUE DE PARTICULIERS</string>
    <string name="info_compte_string">Informations du compte</string>


    <string name="register">register</string>
    <string name="email">email</string>
    <string name="click_to_login">Click to Login</string>

    <string-array name="options">
        <item>Choisissez votre opérateur</item>
        <item>Maroc Telecom</item>
        <item>Orange</item>
        <item>Inwi</item>
    </string-array>

    <string-array name="options_fam">
        <item>Choisissez votre situation familiale</item>
        <item>Marié(e)</item>
        <item>Divorcé(e)</item>
        <item>Veuf(ve)</item>
        <item>Célibataire</item>
    </string-array>

    <string-array name="options_prof">
        <item>Choisissez votre statut professionnel</item>
        <item>Étudiant(e)</item>
        <item>Employé(e)</item>
        <item>Indépendant(e)</item>
        <item>Entrepreneur(e)</item>
        <item>Fonctionnaire</item>
        <item>Artiste</item>
        <item>Chercheur(e)</item>
        <item>Consultant(e)</item>
        <item>Médecin</item>
        <item>Avocat(e)</item>
        <item>Ingénieur(e)</item>
        <item>Enseignant(e)</item>
        <item>Scientifique</item>
        <item>Autre</item>
    </string-array>

</resources>